syntax = "proto3";

package registry;

option go_package = "github.com/Flaasks/esercizio-go/pkg/pb";

// Servizio di Service Registry
service ServiceRegistry {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Deregister(DeregisterRequest) returns (DeregisterResponse);
    rpc GetServices(GetServicesRequest) returns (GetServicesResponse);
}

message RegisterRequest {
    string service_name = 1;
    string address = 2;
    int32 port = 3;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message DeregisterRequest {
    string service_name = 1;
    string address = 2;
    int32 port = 3;
}

message DeregisterResponse {
    bool success = 1;
    string message = 2;
}

message GetServicesRequest {
    string service_name = 1;
}

message ServiceInstance {
    string address = 1;
    int32 port = 2;
}

message GetServicesResponse {
    repeated ServiceInstance instances = 1;
}
